# The-Social-Recipe-Network

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: foodgram_workflow.yml  yamdb_workflow.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/core/: Constants.py  classes.py  constants.py  utils.py  validators.py
backend/receipts/: models.py
backend/recipes/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/recipes/management/commands/: csv_to_base.py
backend/recipes/migrations/: 0001_initial.py  0002_alter_ingredient_options_and_more.py  0002_initial.py  0002_rename_quantity_ingredient_amount_and_more.py  0003_rename_carts_cart_rename_favorites_favorite_and_more.py  0003_rename_ingredientreceipt_ingredientrecipe_and_more.py  0003_rename_tagreceipt_tagrecipe.py  0004_alter_ingredient_amount_and_more.py  0004_remove_amountingredient_ingredients_and_more.py  0004_rename_image_url_recipe_image_and_more.py  0005_alter_ingredient_amount_alter_ingredient_name.py  0005_rename_ingredient_amountingredient_ingredients.py  0006_alter_favorite_options_and_more.py  0006_delete_follow.py  0007_alter_favorite_options_and_more.py  0007_alter_recipe_author.py  0008_carts_rename_favorite_favorites_remove_cart_recipe_and_more.py  0009_cart_rename_favorites_favorite_remove_carts_recipe_and_more.py  0010_alter_recipe_author.py  0011_alter_recipe_author.py  0012_alter_recipe_cooking_time_alter_recipe_image.py
backend/users/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_myuser_email_alter_myuser_password_and_more.py  0002_alter_myuser_options_alter_myuser_is_active_and_more.py  0002_user_is_subscribed.py  0003_alter_user_is_subscribed.py  0003_remove_myuser__username_is_too_short__and_more.py  0004_alter_user_is_subscribed.py  0005_follow.py
data/: recipes_ingredient_2023_05_03_20_01_42.txt
infra/: docker-compose.yml
infra-dev/: docker-compose.yml
